<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sza_xui_kordinata</name>
  <version>0.0.1</version>
  <description>This package publishes random 2D coordinates and computes their distance from the origin.</description>
  <maintainer email="szabogeri8@gmail.com">Szabo Gergely</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>